--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,10 @@
   <title>Quail - Trading Strategy Builder</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="Quail - Advanced Trading Strategy Builder and Backtesting Platform">
+  <link rel="icon" type="image/svg+xml" href="assets/quaillogo.svg">
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 </head>
 <body>
   <app-root></app-root>
